@@ -8,6 +8,7 @@ Device specific changes/fixes
 	* Junsi iCHargerUSB - correct power calculation for continuous recorded data while loading from OSD
 	* Junsi DX* - correct input power values
 	* GPS-Logger3 - calculate offset of both pressure sensors while calculating pressure ∆TEC
+	* GPS-Logger3 - calculate average AirSpeed between 39,5 and 40,5 km/h and average pressure ∆TEC
 
 
 Version 3.5.1 - 25 Oct 2021
